--- a/trunk/MasterDetail/src/org/biz/invoicesystem/master/ui/ItemMasterTab.form
+++ b/trunk/MasterDetail/src/org/biz/invoicesystem/master/ui/ItemMasterTab.form
@@ -199,7 +199,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="itemMasterUI21" min="-2" pref="518" max="-2" attributes="0"/>
-                      <EmptySpace pref="27" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
